{
    "name": "BeaconEditorInput",
    "maps": [
        {
            "name": "Beacon",
            "id": "ba1f2000-9202-4678-a0a0-2418569ee2c1",
            "actions": [
                {
                    "name": "MoveLock",
                    "type": "Button",
                    "id": "c84c4964-62d8-4ddd-acf9-985a500339da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UnlockAdd",
                    "type": "Button",
                    "id": "8578702b-15cb-41a7-a68f-1021b6f8b5d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Add",
                    "type": "Button",
                    "id": "871ff851-40be-48a8-a21b-ae02a8ffdec9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "0be6a015-b72a-4b3b-bde0-22d7cd0f2a74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "Delete",
                    "type": "Button",
                    "id": "0f79415c-77df-43d7-a49e-98b6fcb0f5d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5334bdad-c13e-40d9-91f0-54528cd034a4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "227cff89-f498-4f7e-82d6-1c3162f7997b",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnlockAdd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebc840c9-b70f-49aa-913c-b9b50b4097f9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Add",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfe272b6-2eb4-4e96-a8c5-436961493378",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6642451d-24e9-4a6b-a498-aac9f9f9530e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36981cfc-e26d-471f-bb8f-4861fbf08e73",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delete",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraManager",
            "id": "cc417fe5-0af7-4bb5-b28c-7f674611776a",
            "actions": [
                {
                    "name": "SwitchToModCam",
                    "type": "Value",
                    "id": "b3ce9ecb-3c00-43db-82bd-c923e2728975",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "ce5cf1fa-0323-48f0-8565-14ec0fb6d027",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3c758d20-132c-48dc-9641-d8fd38e0fddd",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2",
                    "interactions": ""
                },
                {
                    "name": "MoveLock",
                    "type": "Button",
                    "id": "bf289342-39db-4cb6-8d9a-ba8952d7849e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Button With Two Modifiers",
                    "id": "c20f9353-8a3c-43ef-8cd5-ffc5938b304c",
                    "path": "ButtonWithTwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToModCam",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "92a46a73-ea88-48e4-8ded-dac6939ace48",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToModCam",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "627cf152-b4c4-4e13-9d7d-c3ec261341f0",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToModCam",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "148242ba-ea5f-42a0-ace2-e397a8f28c48",
                    "path": "<Keyboard>/OEM1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToModCam",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c365a32b-b5c6-41cc-af04-922065d883eb",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "679d533f-4cba-4f17-a548-138d538e3291",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button With One Modifier",
                    "id": "63c244c4-5fc4-48a7-980c-891d2a3c7f40",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "eb16d064-ba94-47d8-bdf5-41cbc120cbfc",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "14823c58-cc37-43f8-aced-d1b8dd580597",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CanvasManager",
            "id": "56a4a0d0-e3da-4307-a36f-c5ce8f1a4ea0",
            "actions": [
                {
                    "name": "ToggleEscMenu",
                    "type": "Button",
                    "id": "935ec9b1-d3c8-4766-9cda-942ab445d3b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpdatePanelBeaconSelection",
                    "type": "Button",
                    "id": "20d1c796-d4f1-4b9f-8410-b5357267caa5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1900c65b-6ae9-422b-aaf6-bd4e34dd0e65",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleEscMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "881e9971-34b3-4365-8e3e-41559ef85e1d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpdatePanelBeaconSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BeaconEditorManager",
            "id": "8ea247d8-e084-479d-8b52-7e69acf3346c",
            "actions": [
                {
                    "name": "ToggleActive",
                    "type": "Button",
                    "id": "c8e99cb8-e82d-4dde-b15d-e3a8e0f7858b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Button With One Modifier",
                    "id": "3bf55fda-833c-4629-b2ac-fc30d82970ff",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleActive",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "77b5063b-668e-4490-884a-25b1ac6837da",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleActive",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "b362ba80-cd14-4867-bf14-f234c846493b",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleActive",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}